# py_elevator

./: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pyelevator/: __init__.py  __main__.py  cli.py  direction.py  elevator.py
tests/: __init__.py  cli_test.py  conftest.py  direction_enum_test.cli
